# SmartApply

./: .gitignore  KEYWORD_EXTRACTION_README.md  PROJECT_STRUCTURE_README.md  check_existing_application.py  convert_to_docx.py  create_formatted_docx.py  extract_keywords.py  generate_documents.py  optimize_profile.py  process_application.py  pyproject.toml  test_json_load.py  test_keyword_extraction.py
Context/: Anschreiben-Template.rtf  job-urls2.txt.rtf  product_owner_profile.md  profil.md
Specification/: Applease-Spec.xmind  KEYWORD_EXTRACTOR_IMPROVEMENTS.md  PROJECT_STRUCTURE_README.md
job_analyzer/: job_offer_analyzer.py
optimizer/: optimizer.py
requirements/: README.md  base.in  base.txt  development.txt  production.txt
scripts/: update_requirements.py
src/smartapply/config/: secrets.py
src/smartapply/keyword_extractor/: __init__.py  keyword_extractor.py  simple_keyword_extractor.py
src/smartapply/reviewer/: reviewer.py
src/smartapply/url_handler/: url_handler.py
tests/integration/: test_ai_keyword_extractor.py
tests/integration/keyword_extractor/: test_ai_keyword_extractor.py
tests/unit/keyword_extractor/: keywords.xlsx  test_keyword_extractor.py  test_simple_keyword_extractor.py
